--- a/References/references.bib
+++ b/References/references.bib
@@ -397,3 +397,24 @@
 	langid = {english},
 	file = {Full Text:/Users/akilan/Zotero/storage/6MLX2U8V/Dennis and Van Horn - 1966 - Programming semantics for multiprogrammed computat.pdf:application/pdf},
 }
+
+@article{watson_capability_nodate,
+	title = {Capability Hardware Enhanced {RISC} Instructions: {CHERI} Instruction-Set Architecture (Version 8)},
+	abstract = {This technical report describes {CHERI} {ISAv}8, the eighth version of the {CHERI} architecture being developed by {SRI} International and the University of Cambridge. This design captures ten years of research, development, experimentation, reﬁnement, formal analysis, and validation through hardware and software implementation.},
+	author = {Watson, Robert N M and Neumann, Peter G and Woodruff, Jonathan and Roe, Michael and Almatary, Hesham and Anderson, Jonathan and Baldwin, John and Barnes, Graeme and Chisnall, David and Clarke, Jessica and Davis, Brooks and Eisen, Lee and Filardo, Nathaniel Wesley and Grisenthwaite, Richard and Joannou, Alexandre and Laurie, Ben and Markettos, A Theodore and Moore, Simon W and Murdoch, Steven J and Nienhuis, Kyndylan and Norton, Robert and Richardson, Alexander and Rugg, Peter and Sewell, Peter and Son, Stacey and Xia, Hongyan},
+	langid = {english},
+	file = {Watson et al. - Capability Hardware Enhanced RISC Instructions CH.pdf:/Users/akilan/Zotero/storage/R9T374YS/Watson et al. - Capability Hardware Enhanced RISC Instructions CH.pdf:application/pdf},
+}
+
+@online{noauthor_-it-yourself_nodate,
+	title = {Do-It-Yourself Virtual Memory Translation {\textbar} {ACM} {SIGARCH} Computer Architecture News},
+	url = {https://dl.acm.org/doi/10.1145/3140659.3080209},
+	urldate = {2024-06-18},
+}
+
+@online{noauthor_hugetlbfs_nodate,
+	title = {Hugetlbfs Reservation — The Linux Kernel documentation},
+	url = {https://www.kernel.org/doc/html/v4.18/vm/hugetlbfs_reserv.html},
+	urldate = {2024-06-18},
+	file = {Hugetlbfs Reservation — The Linux Kernel documentation:/Users/akilan/Zotero/storage/AV8UT59L/hugetlbfs_reserv.html:text/html},
+}
