--- a/thesis.tex
+++ b/thesis.tex
@@ -142,7 +142,7 @@
 % \include{ResearchQuestions/researchQuestions}
 % \include{LiteratureReview/literatureReview}
 % \include{Year1Activity/year1Activity}
-% \include{ResearchTimeline/researchTimeline}
+\include{ResearchTimeline/researchTimeline}
 % \include{Conclusion/conclusion}
 % \include{Chapter1/chapter1}
 % \include{Chapter2/chapter2}
